# YTPodcast

./: .gitignore  pyproject.toml  pytest.ini
redis/: docker-compose.yml
tests/: conftest.py  test_cache.py  test_cache_performance.py  test_data.json  test_utils.py  test_youtube.py  vcr_config.py
tests/cassettes/: test_data.yaml
tests/cassettes/test_youtube/: TestACachedVideoFactory.test_should_cache_the_video_on_first_call.yaml  TestACachedVideoFactory.test_should_reach_youtube_on_the_first_call.yaml  TestACachedVideoFactory.test_should_use_the_cache_after_the_first_call.yaml  TestAGeneratedVideoList.__setup__.yaml  TestAGeneratedVideoList.test_should_accept_a_limit_argument.yaml  TestAGeneratedVideoList.test_should_also_support_playlists.yaml  TestAVideo.__setup__.yaml  TestAVideoFactory.test_should_be_able_to_produce_a_video_from_a_url.yaml  TestTheStreamUrl.test_should_be_obtainable_from_the_video_id.yaml
tests/youtube/: test_models.py  test_youtube.py
tests/youtube/cassettes/test_youtube/: TestAYouTubeInfoImplementation.test_can_read_from_a_cache[cache_obj0-PytubeInfo].yaml  TestAYouTubeInfoImplementation.test_can_read_from_a_cache[redis_cache-PytubeInfo].yaml  TestAYouTubeInfoImplementation.test_can_read_from_a_cache[shelve_cache-PytubeInfo].yaml  TestAYouTubeInfoImplementation.test_can_use_a_cache[cache_obj0-PytubeInfo].yaml  TestAYouTubeInfoImplementation.test_can_write_to_a_cache[cache_obj0-PytubeInfo].yaml  (+6 more)
ytpodcast/: api.py  cache.py  utils.py  youtube.py
ytpodcast/youtube/: __init__.py  base.py  models.py  pytube.py
